--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ResponsiveFilemanager",
+  "name": "responsive.filemanager",
   "version": "9.9.0",
   "homepage": "http://www.responsivefilemanager.com/",
   "authors": [
@@ -15,19 +15,19 @@
   ],
   "dependencies": {
     "jquery": "1.9.1",
-    "jquery_lazyload": "git@github.com:tuupola/jquery_lazyload.git",
-    "jquery-scrollstop": "git@github.com:ssorallen/jquery-scrollstop.git",
+    "jquery_lazyload": "tuupola/jquery_lazyload.git",
+    "jquery-scrollstop": "ssorallen/jquery-scrollstop.git",
     "jQuery-contextMenu": "~1.6.6",
-    "bootbox.js": "git@github.com:makeusabrew/bootbox.git#3.3.0",
+    "bootbox.js": "makeusabrew/bootbox.git#3.3.0",
     "jquery-touchswipe": "~1.6.8",
     "dropzone": "~4.0.1",
     "zeroclipboard": "2.1.6",
     "bootstrap": "2.3.1",
     "bootstrap-modal": "~2.2.5",
-    "bootstrap-lightbox": "git@github.com:jbutz/bootstrap-lightbox.git#0.6.0",
+    "bootstrap-lightbox": "jbutz/bootstrap-lightbox.git#0.6.0",
     "jquery-ui": "1.10.4",
     "jqueryui-touch-punch": "*",
-    "jPlayer": "git@github.com:happyworm/jPlayer.git#2.4.0",
+    "jPlayer": "happyworm/jPlayer.git#2.4.0",
     "html5shiv": "3.6.2",
     "viewerjs": "~0.5.5"
   },
