--- a/bower.json
+++ b/bower.json
@@ -15,19 +15,19 @@
   ],
   "dependencies": {
     "jquery": "1.9.1",
-    "jquery_lazyload": "tuupola/jquery_lazyload.git",
-    "jquery-scrollstop": "ssorallen/jquery-scrollstop.git",
+    "jquery_lazyload": "tuupola/jquery_lazyload",
+    "jquery-scrollstop": "ssorallen/jquery-scrollstop",
     "jQuery-contextMenu": "~1.6.6",
-    "bootbox.js": "makeusabrew/bootbox.git#3.3.0",
+    "bootbox.js": "makeusabrew/bootbox#3.3.0",
     "jquery-touchswipe": "~1.6.8",
     "dropzone": "~4.0.1",
     "zeroclipboard": "2.1.6",
     "bootstrap": "2.3.1",
     "bootstrap-modal": "~2.2.5",
-    "bootstrap-lightbox": "jbutz/bootstrap-lightbox.git#0.6.0",
+    "bootstrap-lightbox": "jbutz/bootstrap-lightbox#0.6.0",
     "jquery-ui": "1.10.4",
     "jqueryui-touch-punch": "*",
-    "jPlayer": "happyworm/jPlayer.git#2.4.0",
+    "jPlayer": "happyworm/jPlayer#2.4.0",
     "html5shiv": "3.6.2",
     "viewerjs": "~0.5.5"
   },
